@@ -346,3 +346,10 @@ emoji,hexcode,group,subgroups,annotation,openmoji_tags,openmoji_author,openmoji_
 ,1F9D1-200D-1FAA9,extras-openmoji,people,dj,"party, disc jockey, Diskjockey, music, rave, techno",Liz Bravo,2022-07-01
 ,1F468-200D-1FAA9,extras-openmoji,people,dj man,"party, disc jockey, Diskjockey, music, rave, techno",Liz Bravo,2022-07-01
 ,1F469-200D-1FAA9,extras-openmoji,people,dj woman,"party, disc jockey, Diskjockey, music, rave, techno",Liz Bravo,2022-07-01
+,E20F,extras-openmoji,travel-places,great pyramid of giza,"seven wonders of the ancient world, egypt",Niklas Kuntz,2022-07-01
+,E210,extras-openmoji,travel-places,colossus of rhodes,"seven wonders of the ancient world, greece",Niklas Kuntz,2022-07-01
+,E211,extras-openmoji,travel-places,hanging gardens of babylon,"seven wonders of the ancient world, iraq",Niklas Kuntz,2022-07-01
+,E212,extras-openmoji,travel-places,lighthouse of alexandria,"seven wonders of the ancient world, egypt",Niklas Kuntz,2022-07-01
+,E213,extras-openmoji,travel-places,mausoleum at halicarnassus,"seven wonders of the ancient world, turkey",Niklas Kuntz,2022-07-01
+,E214,extras-openmoji,travel-places,statue of zeus at olympia,"seven wonders of the ancient world, greece",Niklas Kuntz,2022-07-01
+,E215,extras-openmoji,travel-places,temple of artemis at ephesus,"seven wonders of the ancient world, turkey",Niklas Kuntz,2022-07-01
