@@ -3937,6 +3937,13 @@ emoji,hexcode,group,subgroups,annotation,tags,openmoji_tags,openmoji_author,open
 ,E20C,extras-openmoji,travel-places,viennese coffee house,,viennese coffee culture,Alexander Müller,2020-05-11,,,,,,
 ,E20D,extras-openmoji,travel-places,black hole,,"interstellar, event horizon, accretion disc",Alexander Müller,2020-06-28,,,,,,
 ,E20E,extras-openmoji,travel-places,foggy mountain,,"fog, weather, berg, peak, elevation, hiking",Jonas Dunkel,2019-05-07,,,,,,
+,E20F,extras-openmoji,travel-places,great pyramid of giza,,"seven wonders of the ancient world, egypt",Niklas Kuntz,2022-07-01,,,,,,
+,E210,extras-openmoji,travel-places,colossus of rhodes,,"seven wonders of the ancient world, greece",Niklas Kuntz,2022-07-01,,,,,,
+,E211,extras-openmoji,travel-places,hanging gardens of babylon,,"seven wonders of the ancient world, iraq",Niklas Kuntz,2022-07-01,,,,,,
+,E212,extras-openmoji,travel-places,lighthouse of alexandria,,"seven wonders of the ancient world, egypt",Niklas Kuntz,2022-07-01,,,,,,
+,E213,extras-openmoji,travel-places,mausoleum at halicarnassus,,"seven wonders of the ancient world, turkey",Niklas Kuntz,2022-07-01,,,,,,
+,E214,extras-openmoji,travel-places,statue of zeus at olympia,,"seven wonders of the ancient world, greece",Niklas Kuntz,2022-07-01,,,,,,
+,E215,extras-openmoji,travel-places,temple of artemis at ephesus,,"seven wonders of the ancient world, turkey",Niklas Kuntz,2022-07-01,,,,,,
 ,E240,extras-openmoji,ui-element,mark,,,Baris Camli,2018-04-18,,,,,,
 ,E241,extras-openmoji,ui-element,toggle button,,,Baris Camli,2018-04-18,,,,,,
 ,E242,extras-openmoji,ui-element,location indicator,,,Baris Camli,2018-04-18,,,,,,
