@@ -66946,6 +66946,125 @@
     "order": ""
   },
   {
+    "emoji": "",
+    "hexcode": "E20F",
+    "group": "extras-openmoji",
+    "subgroups": "travel-places",
+    "annotation": "great pyramid of giza",
+    "tags": "",
+    "openmoji_tags": "seven wonders of the ancient world, egypt",
+    "openmoji_author": "Niklas Kuntz",
+    "openmoji_date": "2022-07-01",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
+    "emoji": "",
+    "hexcode": "E210",
+    "group": "extras-openmoji",
+    "subgroups": "travel-places",
+    "annotation": "colossus of rhodes",
+    "tags": "",
+    "openmoji_tags": "seven wonders of the ancient world, greece",
+    "openmoji_author": "Niklas Kuntz",
+    "openmoji_date": "2022-07-01",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
+    "emoji": "",
+    "hexcode": "E211",
+    "group": "extras-openmoji",
+    "subgroups": "travel-places",
+    "annotation": "hanging gardens of babylon",
+    "tags": "",
+    "openmoji_tags": "seven wonders of the ancient world, iraq",
+    "openmoji_author": "Niklas Kuntz",
+    "openmoji_date": "2022-07-01",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
+    "emoji": "",
+    "hexcode": "E212",
+    "group": "extras-openmoji",
+    "subgroups": "travel-places",
+    "annotation": "lighthouse of alexandria",
+    "tags": "",
+    "openmoji_tags": "seven wonders of the ancient world, egypt",
+    "openmoji_author": "Niklas Kuntz",
+    "openmoji_date": "2022-07-01",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
+    "emoji": "",
+    "hexcode": "E213",
+    "group": "extras-openmoji",
+    "subgroups": "travel-places",
+    "annotation": "mausoleum at halicarnassus",
+    "tags": "",
+    "openmoji_tags": "seven wonders of the ancient world, turkey",
+    "openmoji_author": "Niklas Kuntz",
+    "openmoji_date": "2022-07-01",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
+    "emoji": "",
+    "hexcode": "E214",
+    "group": "extras-openmoji",
+    "subgroups": "travel-places",
+    "annotation": "statue of zeus at olympia",
+    "tags": "",
+    "openmoji_tags": "seven wonders of the ancient world, greece",
+    "openmoji_author": "Niklas Kuntz",
+    "openmoji_date": "2022-07-01",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
+    "emoji": "",
+    "hexcode": "E215",
+    "group": "extras-openmoji",
+    "subgroups": "travel-places",
+    "annotation": "temple of artemis at ephesus",
+    "tags": "",
+    "openmoji_tags": "seven wonders of the ancient world, turkey",
+    "openmoji_author": "Niklas Kuntz",
+    "openmoji_date": "2022-07-01",
+    "skintone": "",
+    "skintone_combination": "",
+    "skintone_base_emoji": "",
+    "skintone_base_hexcode": "",
+    "unicode": "",
+    "order": ""
+  },
+  {
     "emoji": "",
     "hexcode": "E240",
     "group": "extras-openmoji",
