@@ -33,7 +33,8 @@ New:
   + 1F1E6-1F1F6-1F48E true south (antarctica) flag by @SpangleLabs #366
   + New category extras-unicode/regional-indicator holding A-Z Regional Indicators by Daniel Utz #351
   + 1F3F3-1F7E6-1F7E9-1F7E8 Berber flag by Daniel Utz
-  + 1F9D1-200D-1FAA9 DJ (person, man, woman) by Liz Bravo @lizbravob
+  + 1F9D1-200D-1FAA9 DJ (person, man, woman) by Liz Bravo @lizbravob #47
+  + E20F seven wonders of the ancient world by Niklas Kuntz
 
 Redesign / Improvements:
   * 1F990, 1F422, 1F98B Redesign of shrimp, butterfly, and turtle by @RobertWinslow #383
